{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 129,
  "lineage": "33b37d73-44f1-8c53-0ba6-0d4d3960c534",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assosiate_route_table_to_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0febd4b857dcfeac8",
            "route_table_id": "rtb-0873caa98d712d891",
            "subnet_id": "subnet-00761519ccdcc9a1d"
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.private_route_table.aws_route_table.route_table",
            "module.private_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assosiate_route_table_to_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abbf00552a991c3d",
            "route_table_id": "rtb-02d970c6355860053",
            "subnet_id": "subnet-0f2f1dd9e7eb4f1ca"
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.public_route_table.aws_route_table.route_table",
            "module.public_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fff1b9a61dec8a5f",
            "arn": "arn:aws:ec2:us-east-1:762233732186:instance/i-0eff449bf36ae62f9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eff449bf36ae62f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-092b956bbdb5b2542",
            "private_dns": "ip-10-0-4-142.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05609752ef1b312a9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00761519ccdcc9a1d",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d0ec09eb1d6293dc"
            ]
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.private_subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.firstVpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:vpc/vpc-0ad1fcb61ac3585fa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0d2c7e0fefd1e9b",
            "default_route_table_id": "rtb-0324e793948b92bbf",
            "default_security_group_id": "sg-0d0ec09eb1d6293dc",
            "dhcp_options_id": "dopt-0dd1b9a8fecd22992",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ad1fcb61ac3585fa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0324e793948b92bbf",
            "owner_id": "762233732186",
            "tags": {
              "Name": "firstVPC"
            },
            "tags_all": {
              "Name": "firstVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:internet-gateway/igw-0f274b16303a79a65",
            "id": "igw-0f274b16303a79a65",
            "owner_id": "762233732186",
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_inbound_shh",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "security_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group-rule/sgr-07eab77e23a18bc99",
            "cidr_ipv4": "10.4.0.0/15",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07eab77e23a18bc99",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041842ec0ce419312",
            "security_group_rule_id": "sgr-07eab77e23a18bc99",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.private_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private_inbound_webapp",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "security_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group-rule/sgr-0926948f7f9ee1890",
            "cidr_ipv4": "10.4.0.0/15",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3000,
            "id": "sgr-0926948f7f9ee1890",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041842ec0ce419312",
            "security_group_rule_id": "sgr-0926948f7f9ee1890",
            "tags": null,
            "tags_all": {},
            "to_port": 3000
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.private_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private_outbound",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "engress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group-rule/sgr-00bc85b7281b65504",
            "cidr_ipv4": "10.0.4.0/24",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-00bc85b7281b65504",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-041842ec0ce419312",
            "security_group_rule_id": "sgr-00bc85b7281b65504",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.private_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:route-table/rtb-0873caa98d712d891",
            "id": "rtb-0873caa98d712d891",
            "owner_id": "762233732186",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_table"
            },
            "tags_all": {
              "Name": "private_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group/sg-041842ec0ce419312",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-041842ec0ce419312",
            "ingress": [],
            "name": "terraform-20241009155301273300000002",
            "name_prefix": "terraform-",
            "owner_id": "762233732186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-private-security-group"
            },
            "tags_all": {
              "Name": "my-private-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:subnet/subnet-00761519ccdcc9a1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00761519ccdcc9a1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "762233732186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "firstVPC"
            },
            "tags_all": {
              "Name": "firstVPC"
            },
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_inbound",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "security_group_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group-rule/sgr-048851c18d8c17f15",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-048851c18d8c17f15",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-057d7498927836bbe",
            "security_group_rule_id": "sgr-048851c18d8c17f15",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.public_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public_outbound",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "engress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group-rule/sgr-02293d4a5e552e31b",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-02293d4a5e552e31b",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-057d7498927836bbe",
            "security_group_rule_id": "sgr-02293d4a5e552e31b",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.public_security_group.aws_security_group.security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:route-table/rtb-02d970c6355860053",
            "id": "rtb-02d970c6355860053",
            "owner_id": "762233732186",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:security-group/sg-057d7498927836bbe",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-057d7498927836bbe",
            "ingress": [],
            "name": "terraform-20241009155301274200000003",
            "name_prefix": "terraform-",
            "owner_id": "762233732186",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_public_security_group"
            },
            "tags_all": {
              "Name": "my_public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:762233732186:subnet/subnet-0f2f1dd9e7eb4f1ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f2f1dd9e7eb4f1ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "762233732186",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "firstVPC"
            },
            "tags_all": {
              "Name": "firstVPC"
            },
            "vpc_id": "vpc-0ad1fcb61ac3585fa"
          },
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_for_public_route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f274b16303a79a65",
            "id": "r-rtb-02d970c63558600531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02d970c6355860053",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.firstVpc.aws_vpc.vpc",
            "module.internet_gateway.aws_internet_gateway.vpc_gateway",
            "module.public_route_table.aws_route_table.route_table"
          ]
        }
      ]
    }
  ]
}